--- a/app/src/main/assets/练习说明.md
+++ b/app/src/main/assets/练习说明.md
@@ -1,7 +1,7 @@
 > 2019国赛练习项目
 
 >王森
-1  3  5  7  9  11  21  22  23  25  32
+1  3  5  7  9  11  21(由于和11过于相似，跳过)  22(由于和9过于相似，跳过)  23  25  32
 
 >昭阳
 2  4  6  8  10  12  15  18   19  26  28  30
