--- a/app/src/main/assets/练习说明.md
+++ b/app/src/main/assets/练习说明.md
@@ -10,7 +10,4 @@
 37  38  45  49  50  55
 
 >尚铁
-13  14  16  17  20  24  27  29  31
-36  41  44  53  54
-
-55
+13  14  16  17  20(由于和16过于相似，跳过)  24(由于和14过于相似，跳过)  27  29  31  36  41  44  53  54  61
